<resources>
    <string name="app_name">ValorantAgents</string>

    <string name="about">About</string>

    <string name="agent_name">Agent Name</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="biography">Biography</string>

    <string name="share">Share This</string>

    <string name="fullName">Muhammad Farhan Anshor</string>
    <string name="email">farhanputra.farhan8@gmail.com</string>

    <string-array name="data_agent_name">
        <item>Brimstone</item>
        <item>Phoenix</item>
        <item>Sage</item>
        <item>Sova</item>
        <item>Viper</item>
        <item>Cypher</item>
        <item>Reyna</item>
        <item>Killjoy</item>
        <item>Breach</item>
        <item>Omen</item>
        <item>Jett</item>
        <item>Raze</item>
    </string-array>
    <string-array name="data_agent_role">
        <item>Controller</item>
        <item>Duelist</item>
        <item>Sentinel</item>
        <item>Initiator</item>
        <item>Controller</item>
        <item>Sentinel</item>
        <item>Duelist</item>
        <item>Sentinel</item>
        <item>Initiator</item>
        <item>Controller</item>
        <item>Duelist</item>
        <item>Duelist</item>
    </string-array>

    <string-array name="data_agent_biography">
        <item>Joining from the USA, Brimstone\'s orbital arsenal ensures his squad always has the advantage. His ability to deliver utility precisely and from a distance makes him an unmatched boots-on-the-ground commander.</item>
        <item>Hailing from the U.K., Phoenix\'s star power shines through in his fighting style, igniting the battlefield with flash and flare. Whether he\'s got backup or not, he\'ll rush into a fight on his own terms.</item>
        <item>The stronghold of China, Sage creates safety for herself and her team wherever she goes. Able to revive fallen friends and stave off aggressive pushes, she provides a calm center to a hellish fight.</item>
        <item>Born from the eternal winter of Russia\'s tundra, Sova tracks, finds, and eliminates enemies with ruthless efficiency and precision. His custom bow and incredible scouting abilities ensure that even if you run, you cannot hide.</item>
        <item>The American chemist, Viper deploys an array of poisonous chemical devices to control the battlefield and cripple the enemy\'s vision. If the toxins don\'t kill her prey, her mind games surely will.</item>
        <item>The Moroccan information broker, Cypher is a one-man surveillance network who keeps tabs on the enemy\'s every move. No secret is safe. No maneuver goes unseen. Cypher is always watching.</item>
        <item>Forged in the heart of Mexico, Reyna dominates single combat, popping off with each kill she scores. Her capability is only limited by her raw skill, making her highly dependent on performance.</item>
        <item>The genius of Germany. Killjoy secures the battlefield with ease using her arsenal of inventions. If the damage from her gear doesn\'t stop her enemies, her robots\' debuff will help make short work of them.</item>
        <item>Breach, the bionic Swede, fires powerful, targeted kinetic blasts to aggressively clear a path through enemy ground. The damage and disruption he inflicts ensures no fight is ever fair.</item>
        <item>A phantom of a memory, Omen hunts in the shadows. He renders enemies blind, teleports across the field, then lets paranoia take hold as his foe scrambles to learn where he might strike next.</item>
        <item>Representing her home country of South Korea, Jett\'s agile and evasive fighting style lets her take risks no one else can. She runs circles around every skirmish, cutting enemies before they even know what hit them.</item>
        <item>Raze explodes out of Brazil with her big personality and big guns. With her blunt-force-trauma playstyle, she excels at flushing entrenched enemies and clearing tight spaces with a generous dose of “boom.”</item>
    </string-array>

    <integer-array name="data_agent_art">
        <item>@drawable/brimstone</item>
        <item>@drawable/phoenix</item>
        <item>@drawable/sage</item>
        <item>@drawable/sova</item>
        <item>@drawable/viper</item>
        <item>@drawable/cypher</item>
        <item>@drawable/reyna</item>
        <item>@drawable/killjoy</item>
        <item>@drawable/breach</item>
        <item>@drawable/omen</item>
        <item>@drawable/jett</item>
        <item>@drawable/raze</item>
    </integer-array>

    <!--<string-array name="data_agent_icon">
        <item>https://cdn.mobalytics.gg/assets/valorant/images/agents/icons/raze.png</item>
    </string-array>-->

    <string-array name="data_agent_icon">
        <item>https://static.wikia.nocookie.net/valorant/images/4/4d/Brimstone_icon.png</item>
        <item>https://static.wikia.nocookie.net/valorant/images/1/14/Phoenix_icon.png</item>
        <item>https://static.wikia.nocookie.net/valorant/images/7/74/Sage_icon.png</item>
        <item>https://static.wikia.nocookie.net/valorant/images/4/49/Sova_icon.png</item>
        <item>https://static.wikia.nocookie.net/valorant/images/5/5f/Viper_icon.png</item>
        <item>https://static.wikia.nocookie.net/valorant/images/8/88/Cypher_icon.png</item>
        <item>https://static.wikia.nocookie.net/valorant/images/b/b0/Reyna_icon.png</item>
        <item>https://static.wikia.nocookie.net/valorant/images/1/15/Killjoy_icon.png</item>
        <item>https://static.wikia.nocookie.net/valorant/images/5/53/Breach_icon.png</item>
        <item>https://static.wikia.nocookie.net/valorant/images/b/b0/Omen_icon.png</item>
        <item>https://static.wikia.nocookie.net/valorant/images/3/35/Jett_icon.png</item>
        <item>https://static.wikia.nocookie.net/valorant/images/9/9c/Raze_icon.png</item>
    </string-array>
</resources>